fix review overflowing

--- a/frontend/src/app/components/general/caretaker-make-bid/caretaker-make-bid.component.css
+++ b/frontend/src/app/components/general/caretaker-make-bid/caretaker-make-bid.component.css
@@ -130,3 +130,8 @@ table {
 td {
   padding-left: 10px;
 }
+
+.review-container {
+  overflow-y: auto;
+  height: 70vh;
+}
